--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ function submitForm(){
 	formdata.append( "e", _("e").value );
 	formdata.append( "m", _("m").value );
 	var ajax = new XMLHttpRequest();
-	ajax.open( "POST", "example_parser.php" );
+	ajax.open( "POST", 'example_parser.php' );
 	ajax.onreadystatechange = function() {
 		if(ajax.readyState == 4 && ajax.status == 200) {
 			if(ajax.responseText == "success"){
